k8s-mysql-deployment.yaml
apiVersion: apps/intrv1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  # 如果pvc的读写模式是只有一个pod可读写，这里只能填写1
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          # 当前容器使用pod实例里的哪个volume实现持久化
          volumeMounts:
          # 这边要对应到mysql的数据存储位置/var/lib/mysql，通过mysql配置文件可以改
            - mountPath: /var/lib/mysql
              name: mysql-storage
          ports:
            - containerPort: 3306
              protocol: TCP
      restartPolicy: Always
      # 整个pod实例有哪些持久化存储的volumes
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
