k8s-mysql-service.yaml
apiVersion: intrv1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      # service端口
      port: 3308
      # 映射到POD的哪个端口，应为默认启动端口
      targetPort: 3306
  type: LoadBalancer
