k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer  # NodePort表示k8s所有实例服务映射成一个端口 loadBalancer则是负载均衡器
  selector:
    app: webook
  ports:
    - protocol: TCP
      name : http
      port: 80
      targetPort: 8080
